eks/deployment-portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-django-app
  template:
    metadata:
      labels:
        app: my-django-app
    spec:
      containers:
      - name: my-django-app
        image: 092744370500.dkr.ecr.ap-southeast-1.amazonaws.com/my-django-portfolio:latest
        ports:
        - containerPort: 80
