eks/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
        - name: jupyter
          image: jupyter/base-notebook
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: notebook-volume
              mountPath: /home/jovyan/work
      # volumes:
      #   - name: notebook-volume
      #     persistentVolumeClaim:
      #       claimName: jupyter-pvc
      
      volumes:
        - name: notebook-volume
          emptyDir: {}
