eks/ubuntu.yaml
apiVersion: v1
kind: Deployment
metadata:
  annotations:
    eks.amazonaws.com/role-arn: arn:aws:iam::092744370500:role/node-group-2-eks-node-group-20240701232045367400000002
  name: ubuntu
  labels:
    app: ubuntu
spec:
  replicas: 1
  containers:
  - image: ubuntu:latest
    name: ubuntu
    command:
      - /bin/bash
      - -c
      - >
        apt-get update &&
        apt-get install -y curl unzip &&
        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" &&
        unzip awscliv2.zip &&
        ./aws/install &&
        sleep 604800
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
