eks/service-portfolio.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-django-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dmy-django-app
