eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/security-groups: sg-0a1b2c3d4e5f6g7h8ccurlc
  name: eks-service
spec:
  selector:
    app: eks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
