eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/role: arn:aws:iam::092744370500:role/AmazonEKSLoadBalancerControllerRole
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0c3b6f1c7c797c3a3,subnet-0f3f9a99f2e421f04,subnet-079d9b2a2cc8bee7c
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:092744370500:certificate/16b5544b-d87a-4afb-bcc8-0d3bc4b68401
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: nginx
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
        {
            "Type": "redirect",
            "RedirectConfig": {
                "Protocol": "HTTPS",
                "Port": "443",
                "Host": "#{host}",
                "Path": "/#{path}",
                "Query": "#{query}",
                "StatusCode": "HTTP_301"
            }
        }
spec:
  rules:
     - host: dev.devopsbymeans.com ##Replace the host value with your desired custom domain 
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
              name: ssl-redirect
              port:
               name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx 
                port:
                  number: 80
